manifest/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
