manifest/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-ingress
  namespace: dev
  labels:
    name: tcc-ingress
spec:
  rules:
    - host: dev.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: auth-service
                port:
                  number: 80
